--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <style>
     html,
@@ -14,6 +13,9 @@
       justify-content: center;
       align-items: center;
       height: 10vh;
+      margin-top: 4px;
+      margin-bottom: 4px;
+      border-radius: 50px;
     }
 
     .row .badge:nth-child(even) {
@@ -77,7 +79,7 @@
       background-size: 20px;
       font-size: 16px;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 15px;
       outline: none;
     }
 
